--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,18 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>1.5.3.RELEASE</version>
 		</dependency>
+		
+		<!-- Swagger -->
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger2</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger-ui</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
