--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,21 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>1.5.3.RELEASE</version>
 		</dependency>
+		
+		<!-- swagger -->
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger2</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+
+		<!-- Swagger ui -->
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger-ui</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
