--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>eu.openreq</groupId>
 	<artifactId>Milla</artifactId>
-	<version>1.1.0</version>
+	<version>1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Milla</name>
