--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port = 9203
 milla.mulperiAddress = http://localhost:9202/
+milla.mallikasAddress = http://localhost:9204/
 
-# H2 (Must change enabled=false for production)
-spring.h2.console.enabled=true 
-spring.h2.console.path=/h2
-# Datasource
-spring.datasource.url=jdbc:h2:./milla-db
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-# spring.jpa.hibernate.ddl-auto=none
+## H2 (Must change enabled=false for production)
+#spring.h2.console.enabled=true 
+#spring.h2.console.path=/h2
+## Datasource
+#spring.datasource.url=jdbc:h2:./milla-db
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+## spring.jpa.hibernate.ddl-auto=none
