--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>eu.openreq</groupId>
 	<artifactId>Milla</artifactId>
-	<version>1.3-SNAPSHOT</version>
+	<version>1.4</version>
 	<packaging>jar</packaging>
 
 	<name>Milla</name>
