changed address, also other major changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 9203
 milla.mulperiAddress = http://localhost:9202/
-#milla.mallikasAddress = http://localhost:9204/
-milla.mallikasAddress = https://openreq.esl.eng.it/uh/mallikas
+milla.mallikasAddress = http://localhost:9204/
+#milla.mallikasAddress = https://openreq.esl.eng.it/uh/mallikas
 
 ## H2 (Must change enabled=false for production)
 #spring.h2.console.enabled=true 
