new controller for similarity detection

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
 			<artifactId>okhttp</artifactId>
 			<version>3.10.0</version>
 		</dependency>
+		
+				<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
 
 		<!-- database features -->
 		<dependency>
