cross-reference detection and more to similarity detection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port = 9203
 milla.mulperiAddress = http://localhost:9202/
 milla.mallikasAddress = http://localhost:9204/
-milla.upcAddress = http://217.172.12.199:9404/
+milla.upcSimilarityAddress = http://217.172.12.199:9404/
+milla.upcCrossReferrenceAddress = http://217.172.12.199:9401/
