cleaned unused classes and methods

--- a/pom.xml
+++ b/pom.xml
@@ -85,17 +85,18 @@
 			<version>20180130</version>
 		</dependency>
 
-		<!-- database features -->
+		<!-- database features 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-jdbc</artifactId> 
-			</dependency> -->
+		 <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-jdbc</artifactId> 
+			</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		-->
 
 		<!-- Swagger -->
 		<dependency>
