--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ milla.mulperiAddress = http://localhost:9202
 milla.mallikasAddress = http://localhost:9204
 milla.upcSimilarityAddress = http://localhost:9404
 milla.upcCrossReferenceAddress = http://localhost:9401
+
+jira.username = #{null}
+jira.password = #{null}
