--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port = 9203
-milla.ownAddress = http://217.172.12.199:9203
-milla.mulperiAddress = http://217.172.12.199:9202
-milla.mallikasAddress = http://217.172.12.199:9204
-milla.upcSimilarityAddress = http://217.172.12.199:9404
-milla.upcCrossReferenceAddress = http://217.172.12.199:9401
+milla.ownAddress = https://api.openreq.eu/milla
+milla.mulperiAddress = https://api.openreq.eu/mulperi
+milla.mallikasAddress = https://api.openreq.eu/mallikas
+milla.upcSimilarityAddress = https://api.openreq.eu/similarity-detection
+milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
 
 jira.username = #{null}
 jira.password = #{null}
