--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,14 @@
 			<artifactId>json</artifactId>
 			<version>20180130</version>
 		</dependency>
-
+		
+		<dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client</artifactId>
+            <version>1.22.0</version>
+        </dependency>
+ 
+		
 		<!-- database features 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
