--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 9203
-milla.ownAddress = http://localhost:9203
-milla.mulperiAddress = http://localhost:9202
-milla.mallikasAddress = http://localhost:9204
-milla.upcSimilarityAddress = http://localhost:9404
-milla.upcCrossReferenceAddress = http://localhost:9401
+milla.ownAddress = https://api.openreq.eu/milla
+milla.mulperiAddress = https://api.openreq.eu/mulperi
+milla.mallikasAddress = https://api.openreq.eu/mallikas
+milla.upcSimilarityAddress = https://api.openreq.eu/similarity-detection
+milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
