--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port = 9203
 milla.ownAddress = http://localhost:9203
 milla.mulperiAddress = http://localhost:9202
 milla.mallikasAddress = http://localhost:9204
-milla.upcSimilarityAddress = http://localhost:9404
+milla.upcSimilarityAddress = http://217.172.12.199:9404
 milla.upcCrossReferenceAddress = http://localhost:9401
