jira address in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ milla.ownAddress = http://localhost:9203
 milla.mulperiAddress = http://localhost:9202
 milla.mallikasAddress = http://localhost:9204
 milla.upcSimilarityAddress = http://217.172.12.199:9404
-milla.upcCrossReferenceAddress = http://localhost:9401
+milla.upcCrossReferenceAddress = http://217.172.12.199:9401
+milla.jiraAddress = https://bugreports-test.qt.io
