--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,9 @@ milla.jiraAddress = https://bugreports-test.qt.io
 milla.nikkeAddress = http://localhost:9209
 milla.palmuAddress = http://localhost:9210
 
-milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=, http://217.172.12.199:9404/upc/similarity-detection/GetResponse?organization=Qt&response=
-milla.detectionPostAddresses = http://localhost:9209/, http://217.172.12.199:9210/postProject, http://217.172.12.199:9404/upc/similarity-detection/AddReqsAndCompute?compare=true&organization=Qt&threshold=0.32&url=http://localhost:9203
+milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
+milla.detectionPostAddresses = http://localhost:9209/, http://217.172.12.199:9210/postProject
+
+#http://217.172.12.199:9404/upc/similarity-detection/GetResponse?organization=Qt&requirementId=
+
+#http://217.172.12.199:9404/upc/similarity-detection/AddReqsAndCompute?compare=true&organization=Qt&threshold=0.32&url=http://localhost:9203
