--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ milla.palmuAddress = http://localhost:9210
 milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
 milla.detectionPostAddresses = http://localhost:9209/, http://217.172.12.199:9210/postProject
 
+milla.organization = Qt
+
 #http://217.172.12.199:9404/upc/similarity-detection/GetResponse?organization=Qt&requirementId=
 
 #http://217.172.12.199:9404/upc/similarity-detection/AddReqsAndCompute?compare=true&organization=Qt&threshold=0.32&url=http://localhost:9203
