json fixed for detection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 9203
 milla.ownAddress = http://localhost:9203
 milla.mulperiAddress = http://localhost:9202
 milla.mallikasAddress = http://localhost:9204
-milla.upcSimilarityAddress = https://api.openreq.eu/similarity-detection
+milla.upcSimilarityAddress = http://217.172.12.199:9404
 milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
 milla.jiraAddress = https://bugreports-test.qt.io
 
