temporary http for nikke/palmu

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ milla.upcSimilarityAddress = https://api.openreq.eu/similarity-detection
 milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
 milla.jiraAddress = https://bugreports-test.qt.io
 
-milla.detectionGetAddresses = https://api.openreq.eu/palmu/getRelated?id=
-milla.detectionPostAddresses = https://api.openreq.eu/nikke/, https://api.openreq.eu/palmu/postProject
+milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
+milla.detectionPostAddresses = http://217.172.12.199:9209/, http://217.172.12.199:9210/postProject
 
 milla.organization = Qt
 
