real jira in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ milla.mallikasAddress = https://api.openreq.eu/mallikas
 milla.upcSimilarityAddress = https://api.openreq.eu/similarity-detection
 
 milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
-milla.jiraAddress = https://bugreports-test.qt.io
+milla.jiraAddress = https://bugreports.qt.io
 
 milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
 milla.detectionPostAddresses = http://217.172.12.199:9209/, http://217.172.12.199:9210/postProject
