--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ milla.upcSimilarityAddress = http://217.172.12.199:9404
 milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
 milla.jiraAddress = https://bugreports-test.qt.io
 
-milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
+milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=, http://217.172.12.199:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
 milla.detectionPostAddresses = http://217.172.12.199:9209/, http://217.172.12.199:9210/postProject
 
 milla.organization = Qt
