--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,18 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 		-->
+		
+		<dependency>
+	        <groupId>com.github.tomakehurst</groupId>
+	        <artifactId>wiremock</artifactId>
+	        <version>2.4.1</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.igniterealtime.smack</groupId>
+	        <artifactId>smack-core</artifactId>
+	        <version>4.0.6</version>
+	    </dependency>
+		
 
 		<!-- Swagger -->
 		<dependency>
