--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ milla.upcSimilarityAddress = https://api.openreq.eu/similarity-detection
 milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
 milla.jiraAddress = https://bugreports.qt.io
 
-milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=, http://217.172.12.199:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
+milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
+milla.detectionGetPostAddress = http://217.172.12.199:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
 milla.detectionPostAddresses = http://217.172.12.199:9209/, http://217.172.12.199:9210/postProject
 milla.detectionUpdateAddresses = http://217.172.12.199:9210/updateRequirements, http://217.172.12.199:9404/upc/similarity-detection/BatchProcess
 milla.organization = Qt
