finally enough coverage?

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ milla.detectionPostAddresses = http://217.172.12.199:9209/, http://217.172.12.19
 milla.detectionUpdateAddresses = http://217.172.12.199:9210/updateRequirements, http://217.172.12.199:9404/upc/similarity-detection/BatchProcess
 milla.organization = Qt
 
+milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
 #http://217.172.12.199:9404/upc/similarity-detection/GetResponse?organization=Qt&requirementId=
 
 #http://217.172.12.199:9404/upc/similarity-detection/AddReqsAndCompute?compare=true&organization=Qt&threshold=0.32&url=http://localhost:9203
