--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port = 9203
 
-milla.ownAddress = http://localhost:9203
-milla.mulperiAddress = http://localhost:9202
-milla.mallikasAddress = http://localhost:9204
-milla.upcSimilarityAddress = http://217.172.12.199:9404
+milla.ownAddress = https://api.openreq.eu/milla
+milla.mulperiAddress = https://api.openreq.eu/mulperi
+milla.mallikasAddress = https://api.openreq.eu/mallikas
+milla.upcSimilarityAddress = https://api.openreq.eu/similarity-detection
+
 milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
-milla.jiraAddress = https://bugreports-test.qt.io
+milla.jiraAddress = https://bugreports.qt.io
 
 milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
 milla.detectionGetPostAddress = http://217.172.12.199:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
