--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,10 @@ milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detectio
 milla.jiraAddress = https://bugreports-test.qt.io
 
 milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
-milla.detectionGetPostAddress = http://217.172.12.199:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
+milla.detectionGetPostAddresses = http://217.172.12.199:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
 milla.detectionPostAddresses = http://217.172.12.199:9209/, http://217.172.12.199:9210/postProject
 milla.detectionUpdateAddresses = http://217.172.12.199:9210/updateRequirements, http://217.172.12.199:9404/upc/similarity-detection/BatchProcess?organization=Qt
+milla.detectionLargeUpdateAddresses = http://217.172.12.199:9209/
 milla.organization = Qt
 
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
