--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ milla.organization = Qt
 
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
 
-milla.swaggerHost = "api.openreq.eu/milla"
+milla.swaggerHost = api.openreq.eu/milla
 #http://217.172.12.199:9404/upc/similarity-detection/GetResponse?organization=Qt&requirementId=
 
 #http://217.172.12.199:9404/upc/similarity-detection/AddReqsAndCompute?compare=true&organization=Qt&threshold=0.32&url=http://localhost:9203
