--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ milla.organization = Qt
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
 
 milla.swaggerHost = localhost:9203
+milla.updateFetchSize = 10
 
 #http://217.172.12.199:9404/upc/similarity-detection/GetResponse?organization=Qt&requirementId=
 
