--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ server.port = 9203
 milla.ownAddress = http://localhost:9203
 milla.mulperiAddress = http://localhost:9202
 milla.mallikasAddress = http://localhost:9204
-milla.upcSimilarityAddress = http://217.172.12.199:9404
-milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
+milla.upcSimilarityAddress = http://localhost:9404
+milla.upcCrossReferenceAddress = http//localhost:9405
 milla.jiraAddress = https://bugreports-test.qt.io
 
-milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
-milla.detectionGetPostAddresses = http://217.172.12.199:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
-milla.detectionPostAddresses = http://217.172.12.199:9209/, http://217.172.12.199:9210/postProject
-milla.detectionUpdateAddresses = http://217.172.12.199:9209/, http://217.172.12.199:9210/updateRequirements, http://217.172.12.199:9404/upc/similarity-detection/BatchProcess?organization=Qt
+milla.detectionGetAddresses = http://localhost:9210/getRelated?id=
+milla.detectionGetPostAddresses = http://localhost:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
+milla.detectionPostAddresses = http://localhost:9209/, http://localhost:9210/postProject
+milla.detectionUpdateAddresses = http://localhost:9209/, http://localhost:9210/updateRequirements, http://localhost:9404/upc/similarity-detection/BatchProcess?organization=Qt
 milla.organization = Qt
 
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
