REST endpoint parameter logging (+refactoring)

--- a/src/main/resources/application-eng.properties
+++ b/src/main/resources/application-eng.properties
@@ -14,6 +14,9 @@ milla.detectionUpdateAddresses = http://217.172.12.199:9209/, http://217.172.12.
 milla.organization = Qt
 
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
+milla.requestLogFile = logs/requests.log
 
-milla.swaggerHost = api.openreq.eu/milla
+milla.swaggerHost = localhost:9203
 milla.updateFetchSize = 10
+
+milla.logActivity = false
