--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,16 @@ milla.jiraAddress = https://bugreports-test.qt.io
 
 milla.detectionGetAddresses = http://localhost:9210/getRelated?id=
 milla.detectionGetPostAddresses = http://localhost:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
-milla.detectionPostAddresses = http://localhost:9209/, http://localhost:9210/postProject
+milla.detectionPostAddresses = http://localhost:9209/, http://localhost:9210/updateRequirements
 milla.detectionUpdateAddresses = http://localhost:9209/, http://localhost:9210/updateRequirements, http://localhost:9404/upc/similarity-detection/BatchProcess?organization=Qt
 milla.organization = Qt
 
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
+milla.requestLogFile = logs/requests.log
 
 milla.swaggerHost = localhost:9203
 milla.updateFetchSize = 10
 
+milla.logActivity = true
 
-#http://217.172.12.199:9404/upc/similarity-detection/GetResponse?organization=Qt&requirementId=
 
-#http://217.172.12.199:9404/upc/similarity-detection/AddReqsAndCompute?compare=true&organization=Qt&threshold=0.32&url=http://localhost:9203
