tests for request logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ milla.jiraAddress = https://bugreports-test.qt.io
 
 milla.detectionGetAddresses = http://localhost:9210/getRelated?id=
 milla.detectionGetPostAddresses = http://localhost:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
-milla.detectionPostAddresses = http://localhost:9209/, http://localhost:9210/updateRequirements
+milla.detectionPostAddresses = http://localhost:9209/, http://localhost:9210/postProject
 milla.detectionUpdateAddresses = http://localhost:9209/, http://localhost:9210/updateRequirements, http://localhost:9404/upc/similarity-detection/BatchProcess?organization=Qt
 milla.organization = Qt
 
