--- a/src/main/resources/application-eng.properties
+++ b/src/main/resources/application-eng.properties
@@ -16,7 +16,7 @@ milla.organization = Qt
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
 milla.requestLogFile = logs/requests.log
 
-milla.swaggerHost = localhost:9203
+milla.swaggerHost = api.openreq.eu/milla
 milla.updateFetchSize = 10
 
 milla.logActivity = false
