Weight param tests done + appLinkKey property

--- a/src/main/resources/application-eng.properties
+++ b/src/main/resources/application-eng.properties
@@ -15,6 +15,7 @@ milla.organization = Qt
 
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
 milla.requestLogFile = logs/requests.log
+milla.jiraAppLinkKey = key.txt
 
 milla.swaggerHost = api.openreq.eu/milla
 milla.updateFetchSize = 10
