--- a/src/main/resources/application-orsitest.properties
+++ b/src/main/resources/application-orsitest.properties
@@ -15,6 +15,7 @@ milla.organization = Qt
 
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
 milla.requestLogFile = logs/requests.log
+milla.jiraAppLinkKey = key.txt
 
 milla.swaggerHost = localhost:9203
 milla.updateFetchSize = 10
