Prototype usage & crawling improved
updated for prototype usage also improved crawling

--- a/src/main/resources/application-eng.properties
+++ b/src/main/resources/application-eng.properties
@@ -5,13 +5,13 @@ milla.mulperiAddress = https://api.openreq.eu/mulperi
 milla.mallikasAddress = https://api.openreq.eu/mallikas
 milla.upcSimilarityAddress = https://api.openreq.eu/similarity-detection
 milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
-milla.jiraAddress = https://bugreports.qt.io
+milla.jiraAddress = http//localhost:8080
 
 milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
 milla.detectionGetPostAddresses = http://217.172.12.199:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
 milla.detectionPostAddresses = http://217.172.12.199:9209/, http://217.172.12.199:9210/postProject
 milla.detectionUpdateAddresses = http://217.172.12.199:9209/, http://217.172.12.199:9210/updateRequirements, http://217.172.12.199:9404/upc/similarity-detection/BatchProcess?organization=Qt
-milla.organization = Qt
+milla.organization = Hyperledger
 
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
 milla.requestLogFile = logs/requests.log
