--- a/src/main/resources/application-eng.properties
+++ b/src/main/resources/application-eng.properties
@@ -1,11 +1,11 @@
 server.port = 9203
 
-milla.ownAddress = https://api.openreq.eu/milla
-milla.mulperiAddress = https://api.openreq.eu/mulperi
-milla.mallikasAddress = https://api.openreq.eu/mallikas
-milla.upcSimilarityAddress = https://api.openreq.eu/similarity-detection
-milla.upcCrossReferenceAddress = https://api.openreq.eu/cross-reference-detection
-milla.jiraAddress = http//localhost:8080
+milla.ownAddress = http://localhost:9203
+milla.mulperiAddress = http://localhost:9202
+milla.mallikasAddress = http://localhost:9204
+milla.upcSimilarityAddress = http://localhost:9404
+milla.upcCrossReferenceAddress = http//localhost:9405
+milla.jiraAddress = https://www.jfrog.com/jira
 
 milla.detectionGetAddresses = http://217.172.12.199:9210/getRelated?id=
 milla.detectionGetPostAddresses = http://217.172.12.199:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
