--- a/src/main/resources/application-orsitest.properties
+++ b/src/main/resources/application-orsitest.properties
@@ -5,7 +5,7 @@ milla.mulperiAddress = http://localhost:9202
 milla.mallikasAddress = http://localhost:9204
 milla.upcSimilarityAddress = http://217.172.12.199:9404
 milla.upcCrossReferenceAddress = http//localhost:9405
-milla.jiraAddress = http//localhost:8080
+milla.jiraAddress = https://www.jfrog.com/jira
 
 milla.detectionGetAddresses = http://localhost:9210/getRelated?id=
 milla.detectionGetPostAddresses = http://217.172.12.199:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
