--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ milla.mulperiAddress = http://localhost:9202
 milla.mallikasAddress = http://localhost:9204
 milla.upcSimilarityAddress = http://localhost:9404
 milla.upcCrossReferenceAddress = http//localhost:9405
-milla.jiraAddress = https://bugreports-test.qt.io
+milla.jiraAddress = http://localhost:2990/jira
 
 milla.detectionGetAddresses = http://localhost:9210/getRelated?id=
 milla.detectionGetPostAddresses = http://localhost:9404/upc/similarity-detection/ReqClusters?maxNumber=20&organization=Qt&requirementId=
@@ -15,7 +15,7 @@ milla.organization = Qt
 
 milla.dependencyUpdateLogFile = logs/proposedDependencyUpdates.log
 milla.requestLogFile = logs/requests.log
-milla.jiraAppLinkKey = key.txt
+milla.jiraAppLinkKey = run/key.txt
 
 milla.swaggerHost = localhost:9203
 milla.updateFetchSize = 10
