--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,13 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.7.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>eu.closedreq</groupId>
+            <artifactId>bridge</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
